[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/astro.png" type="Texture" id=1]
[ext_resource path="res://reverse_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://BW_Jam_Loop_Theme.mp3" type="AudioStream" id=3]
[ext_resource path="res://scripts/player.gd" type="Script" id=13]

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "JUMP",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "RUN",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "ATTACK",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5, 10 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
position = Vector2( 3, 6 )
frames = SubResource( 2 )
animation = "IDLE"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 6 )
scale = Vector2( 1.8, 1.55 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 16.0
autostart = true

[node name="DeathTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 4.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2( 3, 6 )
scale = Vector2( 1.9, 1.6 )
shape = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -7.0

[node name="theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.667
autoplay = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
